--- a/wip.html
+++ b/wip.html
@@ -14,7 +14,7 @@
 		
 		jQuery(function() {		
 		    jQuery.getFeed({
-		        url: 'proxy2.php',
+		        url: 'http://garyhodgson.com/ubiquity/proxy.php',
 		        success: function(feed) {
 		            var html = '<ul>';
 		            
