--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<p>&nbsp;</p>
 
 	<div class="toc" id="messages"><h4>Latest News</h4>
-		Version 0.3.6 now available, which fixes a couple of minor bugs.  (15th December 2008)
+		Version 0.3.7 now available, which reverted the add-task 'tags' modifier to allow new tags to be defined (previously this could only list existing tags).  (21st December 2008)
 	</div>
 		
 	<h1><a id="About" name="About">About</a></h1>
@@ -210,6 +210,7 @@
 	<blockquote>
 		<div class="release_notes">
 			<ul>
+				<li>0.3.7 - 21st December 2008 - add-task command now allows any abitrary text to be used.  A previous change had accidentally restricted this to list only existing tags.</li>
 				<li>0.3.6 - 15th December 2008 - Updated the RTM api URLs.</li>
 				<li>0.3.5 - 11th December 2008 - Quick fix to handle the RTM service being down in a more elegant way.</li>
 				<li>0.3.4 - 9th December 2008</li>
