added warning message for 0.1.7 Ubiquity problem

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 
 	<p>&nbsp;</p>
 
-	<div class="toc" id="messages"><h4>Latest News</h4>
-		Version 0.3.7 now available, which reverted the add-task 'tags' modifier to allow new tags to be defined (previously this could only list existing tags).  (21st December 2008)
+<div class="toc" id="messages"><h4>Latest News</h4>
+		<img src="images/rtm/warning.png">
+		WARNING: Version 0.1.7 of the Ubiquity add-on seems to have broken the commands. I am working on a fix. (25th March 2009)
 	</div>
 		
 	<h1><a id="About" name="About">About</a></h1>
