Added versions page, plus links to this in the index page.

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
 	<blockquote>
 		<div class="release_notes">
 			<ul>
-				<li>0.3.8 - 25th March 2009 - Small bug fix introduced with Ubiquity 0.1.7 which caused the entire script to be rejected and therefore stopped all commands from appearing.</li>
-				<li>0.3.7 - 21st December 2008 - add-task command now allows any abitrary text to be used.  A previous change had accidentally restricted this to list only existing tags.</li>
-				<li>0.3.6 - 15th December 2008 - Updated the RTM api URLs.</li>
-				<li>0.3.5 - 11th December 2008 - Quick fix to handle the RTM service being down in a more elegant way.</li>
-				<li>0.3.4 - 9th December 2008</li>
+				<li><a target="_blank" href="version.html?version=0.3.8">0.3.8</a> - 25th March 2009 - Small bug fix introduced with Ubiquity 0.1.7 which caused the entire script to be rejected and therefore stopped all commands from appearing.</li>
+				<li><a target="_blank" href="version.html?version=0.3.7">0.3.7</a> - 21st December 2008 - add-task command now allows any abitrary text to be used.  A previous change had accidentally restricted this to list only existing tags.</li>
+				<li><a target="_blank" href="version.html?version=0.3.6">0.3.6</a> - 15th December 2008 - Updated the RTM api URLs.</li>
+				<li><a target="_blank" href="version.html?version=0.3.5">0.3.5</a> - 11th December 2008 - Quick fix to handle the RTM service being down in a more elegant way.</li>
+				<li><a target="_blank" href="version.html?version=0.3.4">0.3.4</a> - 9th December 2008</li>
 					<ul>
 						<li>Added notes belonging to a task to the 'rtm-view-task' command</li>
 						<li>Added 'rtm-note-task' command</li>
