Updated for 0.4 release

--- a/version.html
+++ b/version.html
@@ -8,6 +8,7 @@
 			var params = {};
 			
 			var versions = new Array();
+			versions["0.4"]="aa33dc7258a9c1524de8b4bde427612802f611fd";
 			versions["0.3.8"]="d546304f7a645bc82156e98082b245ac5bf53417";
 			versions["0.3.7"]="7d2a328e52ca51378a08ee1d54ea17f5ec2f1fb5";
 			versions["0.3.6"]="205fb55089cf74edf8af2ae62287d423dc0eaa61";
