minor text change

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		This product uses the Remember The Milk API but is not endorsed or certified by Remember The Milk.
 		<br>
 		<br>	
-		Feedback, comments and suggestions are welcome: <a href="mailto:contact@garyhodgson.com">contact@garyhodgson.com</a>
+		Feedback, comments and suggestions are welcome: <a href="mailto:contact@garyhodgson.com">via email</a>, and issues can be reported via the <a href="http://github.com/garyhodgson/ubiquity-rtm-api/issues">Github issues page</a>.  I try and keep the commands in a working order, and occassionally get a chance to add new functionality, but I rarely get time to focus on this project, and so please have patience in expecting a reply.
 	</p>
 
 	<h1><a id="Command_Summary" name="Command_Summary">Command Summary</a></h1>
